<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Teslasoft Core</string>
    <string name="activity_init_name" translatable="false">Teslasoft Core</string>
	<string name="teslasoft_id" translatable="false">Teslasoft ID</string>
    <string name="activity_auth_name">Sign In</string>
    <string name="permission_access_core_desc">access Teslasoft Core with administrative rights</string>
	<string name="permission_access_root_desc">request root access on this device. Apps with root access may harm your device</string>
	<string name="permission_access_smartcard_desc">use SmartCard API to authenticate users</string>
	<string name="permission_access_bio_desc">use biometric authentication on this device</string>
	<string name="permission_access_corex_desc">use CoreX shared library and load system-protected binaries</string>
	<string name="permission_access_auth_desc">call Jarvis Account API to authenticate users</string>
	<string name="device_admin_desc">Needs for security services such as biometric authentication or app lock</string>
    <string name="preferences">Account Settings</string>
    <string name="select_account_title">Select an account to continue</string>
    <string name="verify_account_title">Verify account</string>
    <string name="account_settings_title">Account Settings</string>
    <string name="notification_note">If you don\'t want to see notification, you can disable it in android settings. The notification helps to keep app in background.</string>
	<string name="crash_service_note">Please be note that service can be started by another app again. If the service keeps stopping, you can disable it, but if you disable it, another app may not work properly.</string>
	<string name="button_cancel">Cancel</string>
	<string name="force_stop">Force stop</string>
	<string name="button_disable">Disable</string>
	<string name="all_services">All services</string>
	<string name="core_desc">Init Service is the main process of this app.</string>
	<string name="state_running">State: Running</string>
	<string name="state_stopped">State: Stopped</string>
	<string name="state_stopped_s">Stopped</string>
	<string name="state_running_s">Running</string>
	<string name="state_disabled_s">Disabled</string>
	<string name="force_start">Force start</string>
	<string name="state_disabled">State: Disabled</string>
	<string name="button_enable">Enable</string>
	<string name="lc_desc">Licence Checks Service checks if you have a licence to use apps.</string>
	<string name="ns_desc">Notification Stats Service is managing notifications of this app.</string>
	<string name="sc_desc">SmartCard Service works with SmartCards.</string>
	<string name="dp_desc">Data Protector Service is protecting your data and accounts in this app.</string>
	<string name="security_title">Security</string>
	<string name="licence_manager_title">Licence Manager</string>
    <string name="error_title">An error occurred</string>
	<string name="error_copy">Copy</string>
	<string name="error_detail">Detail</string>
	<string name="error_close">Close</string>
	<string name="stacktrace_copied">Error message copied to clipboard</string>
	<string name="collect_crash_info">Collecting crash info ...</string>
	<string name="settings_title">Settings</string>
    <string name="fingerprint_touch_message">Touch the fingerprint sensor</string>
	<string name="fingerprint_permission_denied">The authenticator does not have permissions to use fingerprint</string>
	<string name="fingerprint_unsupported_device">Fingerprint is not supported on your device</string>
	<string name="fingerprint_err_unsafe_operation">ERROR: Unsafe authentication method: The device does not have screenlock</string>
	<string name="fingerprint_not_recognized">Not recognized</string>
	<string name="fingerprint_completed">Authentication completed</string>
	<string name="fingerprint_not_prints">No fingerprints found. Please add at least 1 fingerprint.</string>
	<string name="authentication_title">Authentication</string>
	<string name="authentication_message">To continue please verify your identity</string>
</resources>
